Day4/terraform/create-win_ec2-instance/imports.tf
import {
  to = aws_vpc.tektutor_vpc
  id = "vpc-0673e871cf9b4cc52"
}

resource "aws_vpc" "tektutor_vpc" {
}
